Fix the position of the hero background on mobile
This fixes the issue of it not being centered correctly.

--- a/theme/static/css/lucidbox.css
+++ b/theme/static/css/lucidbox.css
@@ -860,6 +860,7 @@ footer textarea {
   .landing-artboard {
     grid-template-columns: 1fr;
     padding-top: 4em;
+    background-attachment: scroll;
   }
 
   .landing-artboard h1 {
